dark mode fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,8 +27,8 @@
   }
 
   .dark {
-    --background: 0 0% 29%;
-    --foreground: 0 0% 100%;
+    --background: 0 0% 12%;
+    --foreground: 0 0% 85%;
     --primary: 154 56% 68%;
     --primary-foreground: 0 0% 100%;
     --secondary: 206 71% 53%;
@@ -38,11 +38,11 @@
     --destructive: 0 98% 44%;
     --destructive-foreground: 0 0% 100%;
     --muted: 0 0% 20%;
-    --muted-foreground: 0 0% 100%;
-    --card: 0 0% 12%;
-    --card-foreground: 0 0% 100%;
+    --muted-foreground: 0 0% 85%;
+    --card: 0 0% 15%;
+    --card-foreground: 0 0% 85%;
     --popover: 0 0% 15%;
-    --popover-foreground: 0 0% 100%;
+    --popover-foreground: 0 0% 85%;
     --border: 0 0% 70%;
     --input: 0 0% 70%;
     --ring: 0 0% 100%;
@@ -53,7 +53,12 @@
     @apply bg-background text-foreground font-body;
   }
 
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     @apply font-heading;
   }
 }
